--- a/themes/first-reviews/package.json
+++ b/themes/first-reviews/package.json
@@ -2,7 +2,10 @@
   "name": "first-reviews",
   "version": "1.1.0",
   "description": "first reviews website",
-  "dependencies": {},
+  "dependencies": {
+    "bootstrap": "^4.6.0",
+    "webpack": "^5.36.2"
+  },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
